--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ authors = ["Chris Proctor <chris@chrisproctor.net>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+easing-functions = "^1.0.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+Sphinx = "^4.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
