--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Chris Proctor <chris@chrisproctor.net>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+sphinx = "^7.0.1"
+furo = "^2023.5.20"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-Sphinx = "^4.4.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
