--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,15 @@ documentation = "https://superturtle.readthedocs.io/en/latest/"
 [tool.poetry.dependencies]
 python = "^3.9"
 
+[tool.poetry.group.docs]
+optional = true
+
 [tool.poetry.group.docs.dependencies]
 sphinx = "^7.0.1"
 furo = "^2023.5.20"
+
+[tool.poetry.group.dev]
+optional = true
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^5.2"
