--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "superturtle"
-version = "1.0.0"
+version = "1.1.0"
 description = "Extensions to Python's turtle"
 authors = [
     {name="Chris Proctor", email="chris@chrisproctor.net"}
@@ -22,6 +22,9 @@ optional = true
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^5.2"
+
+[tool.poetry.dependencies]
+svg-turtle = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
